# doodleops-public

./: .gitignore  .pre-commit-config.yaml  ACCEPTABLE_USE_POLICY.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  FAQ.md  LICENSE.md  Makefile  ReadMe.md
app_api/: CHANGELOG.md  Dockerfile  ReadMe.md  entrypoint.sh  pyproject.toml  requirements.txt  uvicorn_config.py
app_api/access_management/: api_auth.py
app_api/app_ai/: ReadMe.md
app_api/app_ai/cloud_run_container_app_ai/v1/: CHANGELOG.md  Dockerfile  ReadMe.md  pyproject.toml  uvicorn_config.py
app_api/app_ai/cloud_run_container_app_ai/v1/access_management/: api_auth.py
app_api/app_ai/cloud_run_container_app_ai/v1/common/: other.py  pub_sub_schema.py  redis_schemas.py  redis_utils.py  twilio_utils.py
app_api/app_ai/cloud_run_container_app_ai/v1/core/: fastapi_app.py  settings.py  tracing.py
app_api/app_ai/cloud_run_container_app_ai/v1/llm_graph/: ReadMe.md  main_supervisor.py
app_api/app_ai/cloud_run_container_app_ai/v1/views/: urls.py  view_ai_twilio.py
app_api/app_ai/views/v1/: urls.py
app_api/app_ai/views/v1/fastapi_views/: route.py  view_twilio_whatsapp_webhook.py
app_api/app_docs/cloud_run_container_app_docs/v1/: CHANGELOG.md  Dockerfile  ReadMe.md  pyproject.toml  uvicorn_config.py
app_api/app_docs/cloud_run_container_app_docs/v1/access_management/: api_auth.py
app_api/app_docs/views/v1/: urls.py
app_api/app_docs/views/v1/fastapi_views/: route.py  (+6 more)
app_api/app_epub/cloud_run_container_app_epub/v1/: CHANGELOG.md  Dockerfile  ReadMe.md  entrypoint.sh  pyproject.toml  uvicorn_config.py
app_api/app_epub/views/v1/: urls.py
app_api/app_images/cloud_run_container_app_images/v1/: CHANGELOG.md  Dockerfile  ReadMe.md  entrypoint.sh  pyproject.toml  uvicorn_config.py
app_api/app_images/views/v1/: urls.py
app_api/app_pdf/: ReadMe.md
app_api/app_pdf/cloud_run_container_app_pdf/v1/: CHANGELOG.md  Dockerfile  pyproject.toml  uvicorn_config.py
app_api/app_pdf/views/v1/: urls.py
app_api/common/: cloud_run.py  cost_management.py  external_resources.py  file_validation.py  other.py  redis_utils.py  secrets_manager.py  sql_utils.py
app_api/common/openai/: fastapi_transaltion.py
app_api/core/: fastapi_app.py  main.py  routes.py  settings.py  tracing.py  urls.py
app_api/documentation/: Authentication.md
app_api/schemas/: auth.py  openai.py  redis_db.py  sql_db.py  urls.py
app_api/templates/: 400.html  404.html  ReDoc.html
app_api/views/: urls.py
app_api/views/v1/: route.py  view_user_credits.py
app_web/: CHANGELOG.md  Dockerfile  entrypoint.sh  gunicorn_conf.py  pyproject.toml  requirements.txt
app_web/app_api/: admin.py  models.py  tasks.py  urls.py  views.py
app_web/app_api/management/commands/: dev_populate_api_counter.py  dev_populate_apis.py  task_has_api_counter_discrepancies.py  task_store_api_counter_obj_for_the_previous_day.py
app_web/app_api/migrations/: 0001_initial.py  0002_api_doc_url_path_alter_api_url_path.py  0003_costofllmappai.py  0004_alter_api_cost.py
app_web/app_api/templates/: base_api_apps_view.html
app_web/app_contact/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
app_web/app_contact/migrations/: 0001_initial.py  0002_initial.py
app_web/app_contact/templates/: contact.html
app_web/app_contact/templates/emails/: email_contact.html
app_web/app_financial/: ReadMe.md  admin.py  admin_forms.py  admin_widgets.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
app_web/app_financial/management/commands/: dev_populate_pricing_tables.py  task_remove_credits_older_than_one_year.py  task_send_metered_usage_to_stripe.py  transfer_stripe_products_to_sandbox.py
app_web/app_financial/migrations/: 0001_initial.py  0002_initial.py  0003_stripesubscriptionitem_last_updated.py  0004_customuserfinancials_and_more.py  0005_enterpriseuser_max_credits_limit_per_month.py
app_web/app_financial/templates/: buy_credit_success_page.html  buy_subscription_success_page.html  pricing_credits.html  pricing_subscriptions.html
app_web/app_pages/: admin.py  forms.py  models.py  urls.py  views.py
app_web/app_pages/migrations/: 0001_initial.py  0002_initial.py  0003_blogcategory_blogpost.py
app_web/app_pages/templates/: blog.html  checkout.html  index.html  privacy.html  success.html  suggest_new_feature.html  terms_and_conditions.html
app_web/app_pages/templatetags/: custom_tags.py
app_web/app_settings/: admin.py  defaults.py  models.py  utils.py
app_web/app_settings/management/commands/: dev_populate_app_settings.py
app_web/app_settings/migrations/: 0001_initial.py
app_web/app_users/: admin.py  forms.py  models.py  tasks.py  tokens.py  urls.py  utils.py  validators.py  views.py
app_web/app_users/management/commands/: dev_populate_users.py  dev_reset_db.py
app_web/app_users/migrations/: 0001_initial.py  0002_phonenumbers.py
app_web/app_users/templates/: base_profile.html  create_account.html  forgot_password.html  login.html  password_reset.html  profile_api_keys.html  profile_api_usage.html  profile_general.html  profile_personal_information.html  profile_security.html
app_web/app_users/templates/admin/: custom_user_change_list.html
app_web/app_users/templates/email/: delete_user_email.html  legal_update_email.html  maintenance_update_email.html  reset_password_email.html  test_email.html  user_validation_email.html  welcome_email.html
app_web/app_users/templates/includes/: profile_sidebar.html
app_web/common/: auth.py  date_time_utils.py  email_utils.py  exceptions.py  firebase.py  normalize.py  os_env_var_management.py  other.py  recaptcha_logic.py  secrets_manager.py  views.py  zendesk.py
app_web/common/redis_logic/: custom_redis.py  redis_schemas.py  redis_utils.py
app_web/common/stripe_logic/: stripe_handlers.py  stripe_schemas.py  stripe_utils.py
app_web/core/: celery.py  middleware.py  settings.py  tracing.py  urls.py  wsgi.py
app_web/documentation/: ReadMe.md  Stripe.md  troubleshooting.md
app_web/static/: 404.html
app_web/templates/: 400.html  403.html  404.html  500.html  base.html  base_email.html
(+346 files in other folders)
