[tool.poetry]
name = "app-docs-v1"
version = "0.4.0"
description = ""
authors = ["Alex Girlea"]

[tool.poetry.dependencies]
python = "~3.10"
uvicorn = "~0.22"
fastapi = "~0.110"
pydantic = "~2.9.1"
cryptography = "~42.0"
python-multipart = "~0.0.9"
openpyxl = "~3.1.5"
pandas = "~2.2.3"
numpy = "~2.0.0"
python-docx = "~0.8.11"
python-pptx = "~0.6.23"
PyMuPDF = "~1.25.1"
aiofiles = "~23.2.1"
python-archive = "~0.1"
natsort = "~8.4.0"
google-cloud-secret-manager = "~2.20.2"

#logging
rich = "~13.9.4"

# this if for opentelemetry
opentelemetry-api = "~1.24.0"
opentelemetry-exporter-gcp-monitoring = "~1.6.0a0"
opentelemetry-exporter-gcp-trace = "~1.6.0"
opentelemetry-exporter-otlp = "~1.24.0"
opentelemetry-exporter-otlp-proto-common = "~1.24.0"
opentelemetry-exporter-otlp-proto-grpc = "~1.24.0"
opentelemetry-exporter-otlp-proto-http = "~1.24.0"
opentelemetry-instrumentation = "~0.45b0"
opentelemetry-instrumentation-asgi = "~0.45b0"
opentelemetry-instrumentation-fastapi = "~0.45b0"
opentelemetry-proto = "~1.24.0"
opentelemetry-sdk = "~1.24.0"
opentelemetry-semantic-conventions = "~0.45b0"
opentelemetry-util-http = "~0.45b0"

[tool.poetry.group.dev.dependencies]
pytest = "~8.2"
httpx = "~0.27.0"
pytest-asyncio = "~0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
